= 0.8.0

* Raise an exception when calling order with something that isn't :asc or
:desc

* Use hanna for spiffy rdocs.

* Raise an exception when attempting to add a named filter to a class if there
is already an existing filter with the same name.

* Documentation. 

* Refactored the custom DSL subclass creation code into a DSLFactory class.

* Added a (fairly simple) performance test.

* Get source_type option working for has_many.

* Correct hard-coded primary key columns.

= 0.6.0

* 100% test coverage. That's right, 100%.

* Added fixes for various options on AR associations.

* Support calling named filters from within joins in filters.

* Stop using _inheritable_attribute for accessing the named filters and just recurse for
them.

* Change the tests for named filters to use anonymous classes so that we're
sure we're starting from a blank slate.

* Make the API work correctly for anonymous classes.

* Correctly handle the case where nil or [] is passed as an argument to the IN
restriction.

* Added is_not_null as a nicer version of is_null.not

= 0.2.0 

* Changed the available join types to inner, left and right.

* Fix a bug where we used the wrong type in polymorphic association joins.

* Use with_scope when chaining filters, named_filters, and AR associations in
order to keep the filter data instead of passing the query parameters directly
and combining them in order to make this work correctly with AR.

* Fix a bug when calling .filter in a chain of associations and named filters.

* Don't include conditions unless there are actually conditions specified.

* Fix a bug where the first and last methods would fail.

* Delegate array methods through to the result of the filter.

* Add proxy_options to mimic the API of named_scope for getting the options
that result from a given query.

* Support chaining with AR associations... (i.e. Blog.posts.published)

* Support has_many and has_one :through

= 0.1.4
