@@ -21,7 +21,7 @@ module RecordFilter
         conditions = @conjunction.to_conditions
         params = { :conditions => conditions } if conditions
         joins = @table.all_joins
-        params[:joins] = joins.map { |join| join.to_sql } * ' ' unless joins.empty?
+        params[:joins] = joins.map { |join| join.to_sql } unless joins.empty?
         if (joins.any? { |j| j.requires_distinct_select? })
           if count_query
             params[:select] = "DISTINCT #{@table.model_class.quoted_table_name}.#{@table.model_class.primary_key}"
